# vllama

./: CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
models/: aliases.yaml
vllama/: cli.py  config.py  daemon.py  manager.py  memory.py  registry.py
