[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllama"
version = "0.1.0"
description = "ollama-compatible CLI for vllm — multi-model management with LRU eviction"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "huggingface-hub>=0.23",
    "litellm>=1.40",
    "httpx>=0.27",
    "psutil>=5.9",
    "pynvml>=11.5",
    "pydantic>=2",
    "pyyaml>=6",
    # vllm installed separately (GPU-dependent wheel)
    # pip install vllm
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
vllama = "vllama.cli:app"

[tool.ruff]
line-length = 100
